# MazeGenerator

./: .gitignore  README.md  README_RUS.md
src/: Makefile  maze.txt
src/controller/: controller.cc  controller.h
src/model/: maze.cc  maze.h  test_main.cc
src/view/: CMakeLists.txt  main.cc  main.qml
src/view/cli/: cli_view.cc  cli_view.h  main.cc
src/view/desktop/: CMakeLists.txt  main.cc  main.qml
